# aggregator-poc

./: Cargo.toml  test.json
crates/aggregator-poc/: Cargo.toml
crates/aggregator-poc/src/: main.rs
