[workspace]
resolver = "2"

members = [
  "crates/aggregator-poc",
]

[workspace.dependencies]
starknet_os = { git = "https://github.com/karnotxyz/sequencer", tag = "v0.14.1-alpha.0", features = ["testing"] }
cairo-vm = "=2.5.0"
starknet-types-core = { version = "0.2.4", default-features = false, features = [
  "hash",
] }
tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
