[package]
name = "aggregator-poc"
version = "0.1.0"
edition = "2024"

[dependencies]
starknet_api = { workspace = true }
starknet_os = { workspace = true }
blockifier = { workspace = true }
starknet_patricia = { workspace = true }
shared_execution_objects = { workspace = true }
cairo-lang-starknet = { workspace = true }
cairo-lang-starknet-classes = { workspace = true }
cairo-lang-utils = { workspace = true }
cairo-lang-casm = { workspace = true }
cairo-vm = { workspace = true }
starknet = { workspace = true }
starknet-types-core = { workspace = true }
pathfinder-class-hash = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
flate2 = { workspace = true }
num-bigint = { workspace = true }
once_cell = { workspace = true }
serde_with = { workspace = true }
starknet-core = { workspace = true }
starknet-crypto = { workspace = true }
bitvec = { workspace = true }
num-traits = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
